--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=app
+
+# Configuración de la base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/veterinariadb?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate: solo actualiza las tablas, no crea la base de datos
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar las consultas SQL en consola (opcional)
+spring.jpa.show-sql=true
