--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=app
 
-# Configuración de la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/veterinariadb?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
+# Configuraciï¿½n de la base de datos MySQL
+spring.datasource.url=jdbc:mysql://Localhost:3306/veterinariadb?useSSL=false&serverTimezone=UTC&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -11,3 +11,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Mostrar las consultas SQL en consola (opcional)
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL8Dialect
